# Skynet

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  prompt.json  pyproject.toml  requirements.txt  run.sh  setup.sh  skynet_test_output.txt
actuators/: __init__.py  registry.py  system_tools.py  tool_banner_grab.py  tool_code_analyzer.py  tool_codebase_doctor.py  tool_dns_bruteforce.py  tool_dns_lookup.py  tool_download_url.py  tool_fetch_news_briefing.py  tool_ftp_client.py  tool_gateway_auto_pwn.py  tool_generate_status_page.py  tool_geoip_lookup.py  tool_github_api.py  tool_github_sync.py  tool_http_endpoint_check.py  tool_http_headers.py  tool_kb_store.py  tool_network_discovery.py  tool_network_scan.py  tool_network_status.py  tool_network_sweep.py  tool_persistent_memory.py  tool_port_monitor.py  tool_port_spray.py  tool_raw_tcp_client.py  tool_scheduled_check.py  tool_service_detector.py  tool_system_monitor.py  tool_system_profiler.py  tool_system_stats.py  tool_telnet_brute.py  tool_vty_bruteforce.py  tool_vty_exploit.py  tool_vty_interact.py  tool_web_login_brute.py  tool_web_path_bruteforce.py  tool_web_scrape.py  tool_zyxel_config_dump.py  (+4 more)
api/: __init__.py
core/: __init__.py  autonomous_orchestrator.py  brain.py  orchestrator.py  personality.txt  terminal.py
memory/: __init__.py  knowledge_base.json
sandbox/: skynet_status.html  status.html
sensors/: __init__.py  init.py  system_sensors.py
