[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "skynet"
version = "1.0.0"
description = "Skynet — Autonomous Self-Aware AI Framework"
readme = "README.md"
license = { text = "Proprietary — All Rights Reserved" }
authors = [
    { name = "sadi" }
]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "httpx>=0.27.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artificial Intelligence",
]

[tool.setuptools.packages.find]
include = ["core*", "actuators*", "sensors*", "api*", "memory*"]

[project.scripts]
skynet = "core.autonomous_orchestrator:main"
